--- a/dev/sass/system/variables.scss
+++ b/dev/sass/system/variables.scss
@@ -15,6 +15,7 @@ $accent-alt-dark: darken($accent-alt, 20%);
 $accent-alt-hover: darken($accent-alt, 5%);
 
 $grey: #d9d9d9;
+$grey-dark: darken($grey, 20%);
 
 //social
 $fb: #3b5998;
